--- a/src/main/frontend/src/header-components/headerStyles.css
+++ b/src/main/frontend/src/header-components/headerStyles.css
@@ -1,10 +1,16 @@
+.header-block {
+    display: flex;
+    justify-content: space-evenly;
+    background: #282c34;
+}
+
 .search-block input[type="submit"] {
-    /*cursor: pointer;
+    cursor: pointer;
     position: absolute;
     right: 0;
     top: 0;
     width: 35px;
     height: 100%;
-    font-size: 14px;*/
-    background: url("src/assets/icon-search.png") no-repeat right 10px center;
+    font-size: 14px;
+    background: url("/assets/icon-search.png") no-repeat right 10px center;
 }
