--- a/src/main/frontend/src/cms_backbone/local-styles.css
+++ b/src/main/frontend/src/cms_backbone/local-styles.css
@@ -37,6 +37,28 @@
     width: 100%;
 }
 
+.digest-container {
+    position: relative;
+}
+
+.digest-container:after {
+    content: "";
+    display: block;
+    padding-bottom: 100%;
+}
+
+.digest-container img {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
 [type=radio] {
     position: absolute;
     opacity: 0;
